<resources>
    <string name="app_name">Consmitor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">欢迎使用</string>
    <string name="theme">远程控制 · 这不是梦</string>

    <string name="file_manager">文件</string>
    <string name="remote_manager">远程</string>
    <string name="setting_manager">设置</string>
    <string name="string_pc">控制电脑</string>
    <string name="string_phone">控制手机</string>
    <string name="break_coonpc">断开链接</string>
    <string name="connpc">链接电脑</string>

    <string name="pc_power">电源</string>
    <string name="screen">截屏</string>
    <string name="wcg">鼠标</string>
    <string name="disk">电脑盘符</string>
    <string name="light">亮度</string>
    <string name="tools">快捷工具</string>
    <string name="search">搜索</string>
    <string name="voice">音量</string>
    <string name="yuying">语音</string>
    <string name="back">返回</string>
    <string name="mIp">我的IP:</string>
    <string name="errorIp">当前网络有故障</string>
    <string name="noconn">未连接</string>

    <string name="manager_video">视频</string>
    <string name="manager_document">文档</string>
    <string name="manager_pic">图片</string>
    <string name="manager_music">音乐</string>
    <string name="manager_apk">安装包</string>
    <string name="manager_zip">压缩包</string>
    <string name="manager_bluetooth">蓝牙</string>
    <string name="manager_download">下载</string>
    <string name="manager_remote">远程</string>

    <string name="file_exp_copy">复制</string>
    <string name="file_exp_move">移动</string>
    <string name="file_exp_delete">删除</string>
    <string name="file_exp_send">发送</string>
    <string name="file_exp_select_all">全选</string>
    <string name="file_exp_nofile">没有文件</string>
    <string name="file_exp_normal_date">-/-/-</string>
    <string name="file_exp_no_open_style">对不起找不到打开该文件的方式</string>
    <string name="file_exp_download">下载</string>

    <string name="account_ac_username">请输入用户名</string>
    <string name="account_ac_password">请输入密码</string>
    <string name="account_ac_set_account">设置账号</string>

    <string name="setting_see_folder">查看接收文件夹</string>
    <string name="setting_clear_folder">清空接收文件夹</string>
    <string name="setting_clear_cache">清除缓存</string>
    <string name="setting_about_us">关于我们</string>
    <string name="setting_feedback">问题反馈</string>
    <string name="setting_exit">退出</string>
    <string name="setting_account">设置账号</string>

    <string name="settings_feedback_tips">请提出您宝贵的意见，谢谢（最多300字）</string>
    <string name="submitButton">提交</string>

    <string name="pctools">工具</string>
    <string name="pcdisk">磁盘分区</string>
    <string name="send_to_pc">发送给电脑</string>
    <string name="send_to_phone">发送给手机</string>
    <string name="right">右击</string>

    <string name="phoneFragmentScanLink">面对面链接</string>
    <string name="phoneFragmentRemoteLink">远程连接</string>

    <string name="phoneFragmentOnline">上线成为被控端</string>
    <string name="phoneFragmentControl">链接被控端</string>
    <string name="file_exp_normal_name">fileName</string>

</resources>
