<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackgroundColor"
    >

    <RelativeLayout
        style="@style/setting_item_style"
        android:id="@+id/settings_see_accept_folder"
        android:layout_marginTop="16dp"
        android:background="@color/normalBackgroundColor"
        >
        <TextView
            style="@style/setting_item_text_style"
            android:text="@string/setting_see_folder"
            />
        <View
            style="@style/setting_item_baseline_style"
            />
    </RelativeLayout>
    <RelativeLayout
        style="@style/setting_item_style"
        android:id="@+id/settings_clear_folder"
        android:background="@color/normalBackgroundColor"
        >
        <TextView
            style="@style/setting_item_text_style"
            android:text="@string/setting_clear_folder"
            />
        <View
            style="@style/setting_item_baseline_style"
            />
    </RelativeLayout>
    <RelativeLayout
        style="@style/setting_item_style"
        android:id="@+id/settings_clear_cache"
        android:background="@color/normalBackgroundColor"
        >
        <TextView
            style="@style/setting_item_text_style"
            android:text="@string/setting_clear_cache"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:id="@+id/settings_cache_size"
            />
    </RelativeLayout>
    <RelativeLayout
        style="@style/setting_item_style"
        android:id="@+id/settings_feedback"
        android:layout_marginTop="16dp"
        android:background="@color/normalBackgroundColor"
        >
        <TextView
            style="@style/setting_item_text_style"
            android:text="@string/setting_feedback"
            />
        <View
            style="@style/setting_item_baseline_style"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_height="48dp"
        android:layout_width="match_parent"
        style="@style/setting_item_style"
        android:id="@+id/settings_about_us"
        android:background="@color/normalBackgroundColor"
        >
        <TextView
            style="@style/setting_item_text_style"
            android:text="@string/setting_about_us"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/settings_exit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/warning"
        android:textSize="14sp"
        android:text="@string/setting_exit"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/normalBackgroundColor"
        android:foreground="?android:selectableItemBackground"
        />
</LinearLayout>