<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/account_ac_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_ac_username"
        android:background="@drawable/feedback_advice_drawable"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        />

    <EditText
        android:id="@+id/account_ac_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/feedback_advice_drawable"
        android:hint="@string/account_ac_password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        />

    <Button
        android:id="@+id/account_ac_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_ac_set_account"
        android:layout_marginTop="32dp"
        android:background="@color/primary_dark"
        android:foreground="?selectableItemBackgroundBorderless"
        android:textColor="@color/normalBackgroundColor"
        android:textSize="16sp"
        />

</LinearLayout>