<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/phoneFragmentScanLink"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/primary_text"
        />
    <include android:id="@+id/codeimage"
        layout="@layout/myphone_layout"/>

    <TextView
        android:id="@+id/scanQR"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="扫码链接"
        android:gravity="center"
        android:textColor="@color/normalBackgroundColor"
        android:background="@drawable/remote_tv_bg"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="32dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneFragmentRemoteLink"
        android:textColor="@color/primary_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        />
    <TextView
        android:id="@+id/phoneOnline"
        android:layout_marginTop="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/phoneFragmentOnline"
        android:gravity="center"
        android:textColor="@color/normalBackgroundColor"
        android:background="@drawable/remote_tv_bg"
        />

    <TextView
        android:id="@+id/phoneControl"
        android:layout_marginTop="32dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/phoneFragmentControl"
        android:gravity="center"
        android:textColor="@color/normalBackgroundColor"
        android:background="@drawable/remote_tv_bg"
        />
</LinearLayout>