<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <View
        android:id="@+id/startimage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:background="@color/primary"
        android:scaleType="fitXY"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/logo2"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:gravity="center|bottom"
            android:text="@string/welcome"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="46sp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/app_name"/>
        <TextView
            android:layout_marginBottom="70dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/theme"/>
    </LinearLayout>
</FrameLayout>