<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fab_menu"
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll01"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="#f72c2c"
                app:elevation="1dp"
                android:src="@mipmap/downpc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/primary_dark"
                app:elevation="1dp"
                android:src="@mipmap/jieping"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="#2f9fe4"
                app:elevation="1dp"
                android:src="@mipmap/shubiao"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv001"
        android:layout_below="@id/ll01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/pc_power"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/screen" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wcg" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/tv001"
        android:id="@+id/ll02"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/fabcolor"
                app:elevation="1dp"
                android:src="@mipmap/pc"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/huangse"
                app:elevation="1dp"
                android:src="@mipmap/light"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/primary_dark"
                app:elevation="1dp"
                android:src="@mipmap/tools"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv002"
        android:layout_below="@id/ll02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/disk" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/light" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tools" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/tv002"
        android:id="@+id/ll03"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/green"
                app:elevation="1dp"
                android:src="@mipmap/search"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/primary_dark"
                app:elevation="1dp"
                android:src="@mipmap/voice"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="26dp"
                app:backgroundTint="@color/zise"
                app:elevation="1dp"
                android:src="@mipmap/yuyin"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tv003"
        android:layout_below="@id/ll03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/search"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/voice"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/yuying"/>
    </LinearLayout>
    <TextView
        android:id="@+id/hide_more_menu"
        android:layout_below="@id/tv003"
        android:layout_marginTop="30dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/back"
        android:gravity="center"
        android:background="@drawable/remote_tv_bg"/>
</RelativeLayout>